Wallet: Fix align items

--- a/universal-login-react/src/ui/styles/assetsItem.sass
+++ b/universal-login-react/src/ui/styles/assetsItem.sass
@@ -25,7 +25,13 @@
     font-size: 14px
     text-transform: capitalize
 
-  .assets-price
+  .assets-price-left
+    text-align: left
+    margin: 0
+    font-size: 12px
+
+  .assets-price-right
+    text-align: right
     margin: 0
     font-size: 12px
 
